--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,11 +1,15 @@
 group 'com.example.flutter_rtmp_streamer'
 version '1.0-SNAPSHOT'
 
+
+
 buildscript {
     ext.kotlin_version = '1.6.10'
     repositories {
         google()
         mavenCentral()
+
+
     }
 
     dependencies {
@@ -18,6 +22,8 @@ rootProject.allprojects {
     repositories {
         google()
         mavenCentral()
+
+        maven { url 'https://jitpack.io' }
     }
 }
 
@@ -47,4 +53,6 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.github.pedroSG94.rtmp-rtsp-stream-client-java:rtplibrary:2.1.7'
+
 }
