--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  equatable: ^2.0.0
+  permission_handler: ^8.3.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
-  equatable: ^2.0.0
+
+
+
+
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
