--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,6 +1,3 @@
-group 'com.example.flutter_rtmp_streamer'
-version '1.0-SNAPSHOT'
-
 
 
 buildscript {
@@ -18,6 +15,15 @@ buildscript {
     }
 }
 
+plugins {
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.4.21'
+}
+
+group 'com.example.flutter_rtmp_streamer'
+version '1.0-SNAPSHOT'
+
+
+
 rootProject.allprojects {
     repositories {
         google()
@@ -29,6 +35,8 @@ rootProject.allprojects {
 
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
+apply plugin: 'org.jetbrains.kotlin.plugin.serialization'
+
 
 android {
     compileSdkVersion 31
@@ -55,4 +63,5 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.github.pedroSG94.rtmp-rtsp-stream-client-java:rtplibrary:2.1.7'
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.0.1'
 }
