--- a/example_basic/pubspec.yaml
+++ b/example_basic/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  unicons: ^2.0.1
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
