--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,14 @@ dependencies:
     sdk: flutter
   equatable: ^2.0.0
   permission_handler: ^8.3.0
+  json_annotation: ^4.5.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
-
-
-
+  build_runner: ^2.1.10
+  json_serializable: ^6.2.0
 
 
 
